--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,13 +1,5 @@
 @import 'fonts';
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local(''),
-    url(../fonts/Montserrat/Montserrat-Regular.woff) format('woff2');
-  font-display: swap;
-}
+@import '../libs/animate.min';
 
 * {
   padding: 0;
@@ -47,7 +39,7 @@ div {
 }
 
 .container {
-  max-width: 1141px;
+  width: 1141px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -77,6 +69,8 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  padding-top: 30px;
+  padding-bottom: 15px;
   background: #ffffff;
 }
 
@@ -374,6 +368,11 @@ input::-webkit-inner-spin-button {
   transform: rotate(-45deg);
   transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
     transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-wrapper {
+  position: relative;
+  bottom: 20px;
 }
 
 @import 'media';
