--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -6,3 +6,11 @@
     url(../fonts/Montserrat/Montserrat-Regular.woff) format('woff2');
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Bebas';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''), url(../fonts/Bebas/BebasNeueRegular.woff) format('woff2');
+  font-display: swap;
+}
