--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,7 @@
 @import '../libs/animate.min';
 
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -45,8 +46,8 @@ div {
 }
 @media (max-width: 1180px) {
   .container {
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -373,6 +374,18 @@ input::-webkit-inner-spin-button {
 .menu-wrapper {
   position: relative;
   bottom: 20px;
+}
+
+.header-title {
+  font-family: Bebas, serif;
+  margin-top: 100px;
+  text-transform: uppercase;
+  font-size: 86px;
+  color: #00362c;
+}
+
+.container-header {
+  max-width: 1141px;
 }
 
 @import 'media';
