--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -395,10 +395,6 @@ input::-webkit-inner-spin-button {
   max-width: 1141px;
 }
 
-.prizes {
-  height: 100vh;
-}
-
 .bottles {
   position: absolute;
   right: 18%;
@@ -462,6 +458,26 @@ input::-webkit-inner-spin-button {
 
 li {
   margin-top: 15px;
+}
+
+.icons-wrapper {
+  position: relative;
+}
+
+.icons {
+  position: absolute;
+  top: -25px;
+  right: 150px;
+  display: flex;
+  justify-content: space-between;
+  width: 250px;
+  margin-right: 40px;
+}
+
+.inst-icon {
+  vertical-align: middle;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 @import 'media';
