--- a/assets/scss/_media.scss
+++ b/assets/scss/_media.scss
@@ -1,10 +1,16 @@
+@media (max-width: 1800px) {
+  .gt-oil {
+    // display: none;
+  }
+}
+
 @media (max-width: 1400px) {
   .header {
     background-position: 50% 130px;
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1200px) {
   .container-header {
     width: 100%;
   }
