--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -8,6 +8,14 @@
 }
 
 @font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 300;
+  src: local(''), url(../fonts/Montserrat/Montserrat-Light.woff) format('woff2');
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Bebas';
   font-style: normal;
   font-weight: 700;
