--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -73,9 +73,13 @@ input::-webkit-inner-spin-button {
 }
 
 .top-line {
+  z-index: 10;
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  width: 100%;
   padding-top: 30px;
   padding-bottom: 15px;
   background: #ffffff;
@@ -84,11 +88,12 @@ input::-webkit-inner-spin-button {
 .header {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
+  margin-top: 120px;
   padding-bottom: 10px;
   background-image: url(../images/header-bg.png);
   background-size: cover;
-  background-position: 0 120px;
+  background-position: center;
   background-repeat: no-repeat;
 }
 .header .container {
@@ -122,6 +127,7 @@ input::-webkit-inner-spin-button {
 .header-bottom {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 .header-lang {
   margin-left: 30px;
@@ -397,9 +403,9 @@ input::-webkit-inner-spin-button {
 
 .bottles {
   position: absolute;
-  right: 18%;
+  right: 50%;
   bottom: -50px;
-  // height: 40px;
+  transform: translate(210%);
 }
 
 .prizes {
@@ -476,6 +482,23 @@ li {
   vertical-align: middle;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.btn-action {
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  display: block;
+  padding: 18px 70px;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 300;
+  color: #fff;
+  background-image: url(../images/header-btn.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  transform: translate(-50%);
 }
 
 @import 'media';
