Index_kz changed styles

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -8,6 +8,15 @@
 }
 
 @font-face {
+  font-family: 'MetaPro Medium';
+  src: url('../fonts/MetaProCond/MetaPro-CondMedi.otf');
+}
+@font-face {
+  font-family: 'MetaPro Bold';
+  src: url('../fonts/MetaProCond/MetaPro-CondXbold.otf');
+}
+
+@font-face {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 300;
