--- a/assets/scss/_media.scss
+++ b/assets/scss/_media.scss
@@ -1,3 +1,9 @@
+@media (max-width: 1600px) {
+  .prizes {
+    background-image: none;
+  }
+}
+
 @media (max-width: 1200px) {
   .container-custom {
     width: 100%;
